unpackaged/main/default/objects/BL_App_Setting__mdt/BL_App_Setting__mdt.object-meta.xml
<CustomObject>
    <label>BL App Setting</label>
    <pluralLabel>BL App Settings</pluralLabel>
</CustomObject>