unpackaged/main/default/objects/BL_App_Setting__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WeChat</fullName>
                <default>true</default>
                <label>WeChat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>