unpackaged/main/default/objects/BL_App_Setting__mdt/fields/Immediate_Log__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Log</label>
    <type>Checkbox</type>
</CustomField>