unpackaged/main/default/objects/BL_App_Setting__mdt/fields/LogHistoryDays__c.field-meta.xml
<CustomField>
    <fullName>LogHistoryDays__c</fullName>
    <label>Log History Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>