unpackaged/main/default/objects/BL_App_Setting__mdt/fields/ProfilesManager__c.field-meta.xml
<CustomField>
    <fullName>ProfilesManager__c</fullName>
    <label>Profiles Manager</label>
    <type>TextArea</type>
</CustomField>