unpackaged/main/default/objects/BL_App_Setting__mdt/fields/ProfilesSA__c.field-meta.xml
<CustomField>
    <fullName>ProfilesSA__c</fullName>
    <label>Profile SA</label>
    <type>TextArea</type>
</CustomField>